# caracole.io

./: .dockerignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Dockerfile  Pipfile  README.md  docker-compose.yml  floreal  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  videgrenier
.github/workflows/: test.yml
caracole/: admin.py  apps.py  context_processors.py  models.py  settings.py  urls.py  views.py  wagtail_hooks.py  wsgi.py
caracole/migrations/: 0001_initial.py  0002_accueil_permanences.py  0002_auto_20181113_1529.py  0003_alter_amis_id_alter_blogtag_id_alter_blogtag_tag_and_more.py  0003_blog.py  0004_alter_article_img_caption_alter_carapage_citation_and_more.py  0004_blog.py  0005_caramel.py  0006_evenements.py  0007_auto_20181119_1522.py  0008_auto_20181119_1615.py
caracole/static/css/: caracole.css
caracole/static/fonts/: stylesheet.css
caracole/static/js/: custom.js
caracole/templates/: acceuil.html  base.html
caracole/templates/caracole/: _article.html  accueil.html  article.html  blog.html  cara_page.html  contact.html  evenements.html  liens.html
caracole/templates/registration/: login.html  registration_form.html
caracole/templates/taggit/: tag_detail.html
pages/: models.py
pages/migrations/: 0001_initial.py  0002_carapage_rubrique.py  0003_section.py  0004_contact.py  0005_amis.py  0006_blank_img.py
pages/templates/pages/: acceuil.html  accueil.html  cara_page.html  contact.html  default_page.html  liens.html
