[tool.poetry]
name = "caracole.io"
version = "0.1.0"
description = "caracole.io website"
authors = ["Guilhem Saurel <webmaster@caracole.io>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ndh = "^5.12.1"
wagtail = "^4.2"
django-registration-redux = "^2.9"
django-yeouia = "^2.0.0"
dmdm = "^1.4.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^5.5"
flake8 = "^3.9.0"
ipython = "^8.10.0"
pygments-zenburn = "^0.9.0"
safety = "^2.3.5"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
python-memcached = "^1.59"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
